crates/aranya-policy-compiler/tests/data/type_errors/substruct_non_struct_invalid_type.fail.policy
struct Baz {
    y int,
}
action foo(x bool) {
    let new_struct = x substruct Baz
    publish new_struct
}
